gcc/testsuite/rust/rustc/ui/block-result/issue-11714.rs
fn blah() -> i32 { // { dg-error ".E0308." "" { target *-*-* } }
    1

    ;
}

fn main() { }

